--- a/index.html
+++ b/index.html
@@ -1,55 +1,402 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en" data-bs-theme="dark">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
+    <link href="style.css" rel="stylesheet" />
+  </head>
 
-<!--Creating A Flowers Website-->
+  <!--Creating A Flowers Website-->
 
-<body>
-    
+  <body>
+    <!--Login Heading Section-->
+    <div class="container">
+      <div
+        class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
+      >
+        <nav class="navbar bg-body-tertiary">
+          <div class="container">
+            <a class="navbar-brand" href="#">
+              <img
+                src="./materials/logo.png"
+                alt="Bootstrap"
+                width="30"
+                height="24"
+              />
+            </a>
+          </div>
+        </nav>
+        <ul
+          class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
+        >
+          <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
+          <li><a href="#" class="nav-link px-2 text-secondary">Features</a></li>
+          <li><a href="#" class="nav-link px-2 text-secondary">Pricing</a></li>
+          <li><a href="#" class="nav-link px-2 text-secondary">FAQs</a></li>
+          <li><a href="#" class="nav-link px-2 text-secondary">About</a></li>
+        </ul>
+        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+          <input
+            type="search"
+            class="form-control me-2"
+            placeholder="Search..."
+            aria-label="Search"
+          />
+        </form>
+        <div class="text-end">
+          <button type="button" class="btn btn-primary">Login</button>
+          <button type="button" class="btn btn-secondary">Sign-up</button>
+        </div>
+      </div>
+    </div>
+
     <!--Heading Section-->
-
-
-
-
-
+    <div class="container my-5">
+      <div
+        class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg"
+      >
+        <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+          <h1 class="display-4 fw-bold lh-1 text-body-emphasis">
+            Nature’s Artistry: A Bloom Beyond the Frame
+          </h1>
+          <p class="lead">
+              Discover the silent elegance of flowers—nature's delicate design, blooming in harmony with the seasons. 
+              From vivid petals to subtle scents, each blossom tells a story of resilience, beauty, and the quiet power of growth.
+          </p>
+          <div
+            class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3"
+          >
+            <button
+              type="button"
+              class="btn btn-primary btn-lg px-4 me-md-2 fw-bold"
+              fdprocessedid="5dawks"
+            >
+              Explore Blooms
+            </button>
+            <button
+              type="button"
+              class="btn btn-outline-secondary btn-lg px-4"
+              fdprocessedid="q02d5d"
+            >
+              Learn More
+            </button>
+          </div>
+        </div>
+        <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+          <img
+            class="rounded-lg-3"
+            src="./materials/heading_flowers.jpg"
+            alt=""
+            width="420"
+          />
+        </div>
+      </div>
+    </div>
 
     <!--Features Section-->
+    <div class="container my-5">
+      <h2 class="pb-2 border-bottom text-center">Discover Our Gifts</h2>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100 text-secondary">
+            <img
+              src="./materials/forhim.webp"
+              class="card-img-top"
+              alt="..."
+              style="height: 250px; object-fit: cover"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Birthday For Him</h5>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100 text-secondary">
+            <img
+              src="./materials/forher.jpg"
+              class="card-img-top"
+              alt="..."
+              style="height: 250px; object-fit: cover"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Birthday For Her</h5>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100 text-secondary">
+            <img
+              src="./materials/graduation.webp"
+              class="card-img-top"
+              alt="..."
+              style="height: 250px; object-fit: cover"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Graduation</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
+    <!-- Sponsor Carousel Section -->
+    <div id="sponsorCarousel" class="carousel slide mt-5" data-bs-ride="carousel" data-bs-interval="2000">
+    <div class="carousel-inner text-center">
+        <h2 class="pb-2 border-bottom text-center">Also available in stores</h2>
+        <!-- Sponsor 1 -->
+        <div class="carousel-item active">
+        <img src="./materials/takealot.jpg"
+            class="d-block mx-auto rounded-circle" alt="Takealot" width="140" height="140">
+        <h2 class="fw-normal mt-3">Takealot</h2>
+        <p>South Africa’s leading online store for all your shopping needs.</p>
+        </div>
 
+        <!-- Sponsor 2 -->
+        <div class="carousel-item">
+        <img src="./materials/amazon2.jpg"
+            class="d-block mx-auto rounded-circle" alt="Amazon" width="140" height="140">
+        <h2 class="fw-normal mt-3">Amazon</h2>
+        <p>The world’s largest online marketplace, offering everything imaginable.</p>
+        </div>
 
+        <!-- Sponsor 3 -->
+        <div class="carousel-item">
+        <img src="./materials/marko2.webp"
+            class="d-block mx-auto rounded-circle" alt="Makro" width="140" height="140">
+        <h2 class="fw-normal mt-3">Makro</h2>
+        <p>Wholesale shopping made easy — electronics, groceries, and more.</p>
+        </div>
 
-
-    <!--Sponsors Section-->
-
-
-
-
+    </div>
+    </div>
 
 
     <!--Pricing Section-->
-
-
-
-
-
+    <div class="container py-3">
+      <header>
+        <div
+          class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom"
+        >
+        </div>
+        <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+          <h1 class="display-4 fw-normal text-body-emphasis">Pricing</h1>
+          <p class="fs-5 text-body-secondary">
+              Choose the perfect plan to help your garden—or your goals—flourish. 
+              Our transparent pricing ensures you get beauty, value, and growth with every option.
+          </p>
+        </div>
+      </header>
+      <main>
+        <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+          <div class="col">
+            <div class="card mb-4 rounded-3 shadow-sm">
+              <div class="card-header py-3">
+                <h4 class="my-0 fw-normal">Seedling</h4>
+              </div>
+              <div class="card-body">
+                <h1 class="card-title pricing-card-title">
+                  $0<small class="text-body-secondary fw-light">/mo</small>
+                </h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>10 budding users</li>
+                  <li>2 GB of storage soil</li>
+                  <li>Email support</li>
+                  <li>Help center access</li>
+                </ul>
+                <button
+                  type="button"
+                  class="w-100 btn btn-lg btn-outline-primary"
+                >
+                  Start Growing
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-4 rounded-3 shadow-sm">
+              <div class="card-header py-3">
+                <h4 class="my-0 fw-normal">Blossom</h4>
+              </div>
+              <div class="card-body">
+                <h1 class="card-title pricing-card-title">
+                  $15<small class="text-body-secondary fw-light">/mo</small>
+                </h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>20 thriving users</li>
+                  <li>10 GB of growth space</li>
+                  <li>Priority email support</li>
+                  <li>Help center access</li>
+                </ul>
+                <button type="button" class="w-100 btn btn-lg btn-primary">
+                  Bloom with us
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-4 rounded-3 shadow-sm border-primary">
+              <div class="card-header py-3 text-bg-primary border-primary">
+                <h4 class="my-0 fw-normal">Full Bloom</h4>
+              </div>
+              <div class="card-body">
+                <h1 class="card-title pricing-card-title">
+                  $29<small class="text-body-secondary fw-light">/mo</small>
+                </h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>30 flourishing users</li>
+                  <li>15 GB of fertile storage</li>
+                  <li>Phone and email support</li>
+                  <li>Help center access</li>
+                </ul>
+                <button type="button" class="w-100 btn btn-lg btn-primary">
+                  Cultivate Excellence
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+      </main>
+    </div>
 
     <!--Footer Section-->
+    <div class="container my-5">
+    <footer class="pt-4 my-md-5 pt-md-5 border-top">
+      <div class="row">
+        <div class="col-12 col-md">
+          <img
+            class="mb-2"
+            src="./materials/logo.png"
+            alt=""
+            width="24"
+            height="19"
+          />
+          <small class="d-block mb-3 text-body-secondary">© 2017–2025</small>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Features</h5>
+          <ul class="list-unstyled text-small">
+            <li class="mb-1">
+              <a class="link-secondary text-decoration-none" href="#"
+                >Cool stuff</a
+              >
+            </li>
+            <li class="mb-1">
+              <a class="link-secondary text-decoration-none" href="#"
+                >Random feature</a
+              >
+            </li>
+            <li class="mb-1">
+              <a class="link-secondary text-decoration-none" href="#"
+                >Team feature</a
+              >
+            </li>
+            <li class="mb-1">
+              <a class="link-secondary text-decoration-none" href="#"
+                >Stuff for developers</a
+              >
+            </li>
+            <li class="mb-1">
+              <a class="link-secondary text-decoration-none" href="#"
+                >Another one</a
+              >
+            </li>
+            <li class="mb-1">
+              <a class="link-secondary text-decoration-none" href="#"
+                >Last time</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Resources</h5>
+          <ul class="list-unstyled text-small">
+            <li class="mb-1">
+              <a class="link-secondary text-decoration-none" href="#"
+                >Resource</a
+              >
+            </li>
+            <li class="mb-1">
+              <a class="link-secondary text-decoration-none" href="#"
+                >Resource name</a
+              >
+            </li>
+            <li class="mb-1">
+              <a class="link-secondary text-decoration-none" href="#"
+                >Another resource</a
+              >
+            </li>
+            <li class="mb-1">
+              <a class="link-secondary text-decoration-none" href="#"
+                >Final resource</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5>About</h5>
+          <ul class="list-unstyled text-small">
+            <li class="mb-1">
+              <a class="link-secondary text-decoration-none" href="#">Team</a>
+            </li>
+            <li class="mb-1">
+              <a class="link-secondary text-decoration-none" href="#"
+                >Locations</a
+              >
+            </li>
+            <li class="mb-1">
+              <a class="link-secondary text-decoration-none" href="#"
+                >Privacy</a
+              >
+            </li>
+            <li class="mb-1">
+              <a class="link-secondary text-decoration-none" href="#">Terms</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+    <div
+      class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom"
+    >
+      <a
+        href="/"
+        class="d-flex align-items-center link-body-emphasis text-decoration-none"
+      >
+        <span class="fs-4">Petal & Stem Co.</span>
+      </a>
+      <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#"
+          >Features</a
+        >
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#"
+          >Enterprise</a
+        >
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#"
+          >Support</a
+        >
+        <a class="py-2 link-body-emphasis text-decoration-none" href="#"
+          >Pricing</a
+        >
+      </nav>
+    </div>
+    </div>
+  </body>
 
-
-
-
-
-</body>
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"
+  ></script>
 </html>
