--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               </div>
               <div class="card-body">
                 <h1 class="card-title pricing-card-title">
-                  $0<small class="text-body-secondary fw-light">/mo</small>
+                  R0<small class="text-body-secondary fw-light">/mo</small>
                 </h1>
                 <ul class="list-unstyled mt-3 mb-4">
                   <li>10 budding users</li>
@@ -230,7 +230,7 @@
               </div>
               <div class="card-body">
                 <h1 class="card-title pricing-card-title">
-                  $15<small class="text-body-secondary fw-light">/mo</small>
+                  R15<small class="text-body-secondary fw-light">/mo</small>
                 </h1>
                 <ul class="list-unstyled mt-3 mb-4">
                   <li>20 thriving users</li>
@@ -251,7 +251,7 @@
               </div>
               <div class="card-body">
                 <h1 class="card-title pricing-card-title">
-                  $29<small class="text-body-secondary fw-light">/mo</small>
+                  R29<small class="text-body-secondary fw-light">/mo</small>
                 </h1>
                 <ul class="list-unstyled mt-3 mb-4">
                   <li>30 flourishing users</li>
